--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^9.0.4",
     "fastify": "^4.22.2",
     "knex": "^2.5.1",
     "zod": "^3.22.2"
